# adaptiveGIPC_benchmark

./: .gitignore
CUDA_Projective_Armadillo/: setting.txt
lib/: BMP_IO.h  MESH.h  helper_cuda.h
linux_cuda12/: CMakeLists.txt  check_gpu.sh  quick_build.sh
linux_cuda12/armadillo/: ARMADILLO.h  CMakeLists.txt  OPENGL_DRIVER_LINUX.h  main.cu
linux_cuda12/cloth/: CLOTHING.h  CMakeLists.txt  OPENGL_DRIVER_LINUX.h  main.cu
linux_cuda12/lib_fixed/: BMP_IO_LINUX.h  CUDA_PROJECTIVE_MESH_LINUX.h  CUDA_PROJECTIVE_TET_MESH_LINUX.h  CUDA_PROJECTIVE_TET_MESH_LINUX.h.bak  CUDA_PROJECTIVE_TET_MESH_WRAPPER.h  DYNAMIC_MESH_LINUX.h  MESH_LINUX.h  cusparse_compat.h
